# saas-souverain

./: .gitattributes  .gitignore  Architecture_SaaS_Souverain_Trois_Acteurs.md  CLAUDE.md  Stack_Technique_Framework_Souverainete_SaaS (1).md  docker-cleanup.ps1  fix_locks.py  requirements.txt  runserver.err  verify.py
.agenthub/sessions/20260609-145008/: config.yaml
config/: settings.py  urls.py
dashboard/: models.py  urls.py  views.py  views_architecture.py  views_relay.py
devices/: admin.py  api_cluster_status.py  api_register.py  models.py  serializers.py  urls.py  urls_api.py  views.py  views_web.py
devices/migrations/: 0001_initial.py  0002_device_node_addr.py  0003_device_web_addr.py  0004_device_node_role.py  0005_device_failover_fields.py
frontend/: package-lock.json  package.json
frontend/public/: palette_couleurs_el_baraa_consult_md.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/pages/: DashboardPage.tsx  TenantDetail.tsx  TenantsPage.tsx
frontend/src/types/: index.ts
licenses/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_api.py  views.py  views_web.py
licenses/migrations/: 0001_initial.py
pme-deploy/: .env.example  COMPTES-ET-TESTS.md  architecture-schema.html  docker-compose.yml  seed-test.sh  setup-primary.sh  setup-standby.sh
pme-deploy/pgadmin/: servers.json
pme-deploy/postgres/: entrypoint.sh  primary-init.sh
relay-deploy/: .env.example  build-relay.ps1  docker-compose.yml  setup.sh
spike/: .dockerignore  Cargo.toml  build-node.ps1  docker-compose.yml
spike/crates/ss-consensus/: Cargo.toml
spike/crates/ss-consensus/src/: cluster.rs  epoch.rs  error.rs  fencing.rs  lib.rs  supervision.rs
spike/crates/ss-crypto/: Cargo.toml
spike/crates/ss-crypto/src/: dek.rs  device_key.rs  error.rs  lib.rs  recovery.rs
spike/crates/ss-journal/: Cargo.toml
spike/crates/ss-journal/src/: entry.rs  error.rs  journal.rs  lib.rs
spike/node/: Cargo.toml  Dockerfile  Dockerfile.stub
spike/node/src/: config.rs  main.rs  relay_client.rs  web.rs
spike/node/src/auth/: mod.rs  routes.rs
spike/node/src/cmd/: adduser.rs  delist.rs  enroll.rs  failover.rs  init.rs  mod.rs  run.rs  status.rs
spike/node/src/stock/: mod.rs  routes.rs
spike/pg-config/: init-primary.sh  standby-entrypoint.sh
spike/relay/: Cargo.toml  Dockerfile
spike/relay/src/: main.rs
static/css/: main.css
templates/: base.html
templates/dashboard/: architecture.html  index.html  relay.html  schema_soutenance.html
templates/devices/: clusters.html  list.html
templates/licenses/: confirm_delete.html  form.html  list.html
templates/registration/: login.html
templates/tenants/: bienvenue.html  confirm_delete.html  detail.html  docker-compose.yml.tmpl  form.html  inscription.html  install-linux.sh.tmpl  install-windows.bat.tmpl  list.html  mon-espace.html
tenants/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_api.py  views.py  views_espace.py  views_web.py
tenants/migrations/: 0001_initial.py  0002_tenant_registration_token.py  0003_tenant_user.py
