[workspace]
members = [
    "crates/ss-crypto",
    "crates/ss-journal",
    "crates/ss-consensus",
    "node",
    "relay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ss-crypto    = { path = "crates/ss-crypto" }
ss-journal   = { path = "crates/ss-journal" }
ss-consensus = { path = "crates/ss-consensus" }

# Crypto (RustCrypto — same algorithms as libsodium, no FFI required for spike)
chacha20poly1305 = "0.10"
x25519-dalek     = { version = "2", features = ["static_secrets"] }
argon2           = "0.5"
blake2           = "0.10"
rand             = "0.8"
rand_core        = { version = "0.6", features = ["getrandom"] }
zeroize          = { version = "1", features = ["derive"] }

# Serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ciborium    = "0.2"
toml        = "0.8"
base64      = "0.22"
hex         = "0.4"

# Base de données
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

# Async
tokio = { version = "1", features = ["full"] }

# Identifiants / Temps
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Réseau (HTTP vers relais pour découverte des pairs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI / TUI
clap    = { version = "4", features = ["derive"] }
qrcode  = "0.14"

# Logs
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Erreurs
thiserror = "2"
anyhow    = "1"

# Tests
tempfile = "3"
