[package]
name    = "node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ss-node"
path = "src/main.rs"

[dependencies]
ss-crypto    = { workspace = true }
ss-journal   = { workspace = true }
ss-consensus = { workspace = true }
sqlx         = { workspace = true }
tokio        = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
clap         = { workspace = true }
qrcode       = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
base64       = { workspace = true }
hex          = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
rand         = { workspace = true }
axum         = { workspace = true }
