[package]
name    = "relay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ss-relay"
path = "src/main.rs"

[dependencies]
tokio     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
anyhow    = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
axum      = "0.7"
tower     = "0.5"
