[package]
name    = "ss-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
serde     = { workspace = true }
serde_json = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
thiserror = { workspace = true }
sqlx      = { workspace = true }
tokio     = { workspace = true }
anyhow    = { workspace = true }
