[package]
name    = "ss-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
x25519-dalek     = { workspace = true }
argon2           = { workspace = true }
blake2           = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }
zeroize          = { workspace = true }
serde            = { workspace = true }
base64           = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }
