[package]
name    = "ss-journal"
version.workspace = true
edition.workspace = true

[dependencies]
ss-crypto = { workspace = true }
ciborium  = { workspace = true }
serde     = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
